syntax = "proto3";
package quasarlabs.quasarnode.qbank;

import "google/api/annotations.proto";
 import "qbank/params.proto";
  import "qbank/common.proto";
// this line is used by starport scaffolding # 1
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "qbank/genesis.proto";

option go_package = "github.com/quasarlabs/quasarnode/x/qbank/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/quasarlabs/quasarnode/qbank/params";
  }

// Queries a list of UserDenomDeposit items.
	rpc UserDenomDeposit(QueryUserDenomDepositRequest) returns (QueryUserDenomDepositResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qbank/user_denom_deposit/{userAcc}";
	}



// Queries a list of UserDeposit items.
	rpc UserDeposit(QueryUserDepositRequest) returns (QueryUserDepositResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qbank/user_deposit/{userAcc}";
	}




// Queries a list of UserClaimRewards items.
	rpc UserClaimRewards(QueryUserClaimRewardsRequest) returns (QueryUserClaimRewardsResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qbank/user_claim_rewards/{userAcc}";
	}

// Queries a list of Withdrawable items.
	rpc Withdrawable(QueryWithdrawableRequest) returns (QueryWithdrawableResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qbank/withdrawable/{userAccount}/{denom}";
	}

// Queries a list of TotalWithdraw items.
	rpc TotalWithdraw(QueryTotalWithdrawRequest) returns (QueryTotalWithdrawResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qbank/total_withdraw/{userAcc}/{vaultID}";
	}

// Queries a list of TotalClaimed items.
	rpc TotalClaimed(QueryTotalClaimedRequest) returns (QueryTotalClaimedResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qbank/total_claimed/{userAcc}/{vaultID}";
	}

// Queries a list of GetAllDepsoitInfos items.
	rpc GetAllDepsoitInfos(QueryGetAllDepsoitInfosRequest) returns (QueryGetAllDepsoitInfosResponse) {
		option (google.api.http).get = "/quasarlabs/quasarnode/qbank/get_all_depsoit_infos/{vaultID}";
	}

// this line is used by starport scaffolding # 2
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryUserDenomDepositRequest {
  string userAcc = 1;
  string denom = 2;
}

message QueryUserDenomDepositResponse {
	uint64 amount = 1;
}


message QueryUserDepositRequest {
  string userAcc = 1;
}

message QueryUserDepositResponse {
	QCoins coins  = 1
	[(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/quasarlabs/quasarnode/x/qbank/types.QCoins"];
}



message QueryUserClaimRewardsRequest {
  string userAcc = 1;
}

message QueryUserClaimRewardsResponse {
	QCoins coins  = 1
	[(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/quasarlabs/quasarnode/x/qbank/types.QCoins"];
}

message QueryWithdrawableRequest {
  string userAccount = 1;
  string denom = 2;
}

message QueryWithdrawableResponse {
  cosmos.base.v1beta1.Coin coin = 1 [(gogoproto.nullable) = false];
}

message QueryTotalWithdrawRequest {
  string userAcc = 1;
  string vaultID = 2;
}

message QueryTotalWithdrawResponse {
  QCoins coins  = 1
  [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/quasarlabs/quasarnode/x/qbank/types.QCoins"];

}

message QueryTotalClaimedRequest {
  string userAcc = 1;
  string vaultID = 2;
}

message QueryTotalClaimedResponse {
	QCoins coins  = 1
	[(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/quasarlabs/quasarnode/x/qbank/types.QCoins"];
  
}

message QueryGetAllDepsoitInfosRequest {
  string vaultID = 1;
}

message QueryGetAllDepsoitInfosResponse {
	repeated DepositInfo depositInfos = 1[(gogoproto.nullable) = false];

}

// this line is used by starport scaffolding # 3
